@@ -2,14 +2,16 @@ pdfTeX is an extended version of eTeX that can create PDF directly from
 TeX source files and enhance the result of TeX typesetting with the help
 of PDF. When PDF output is not selected, pdfTeX produces normal DVI
 output, otherwise it produces PDF output that looks essentially
-identical to the DVI output. An important aspect of this project was to
-investigate alternative justification algorithms, resulting in the
-margin kerning and font expansion "microtypgraphy" features, inspired by
-Peter Karow.
+identical to the DVI output
 
-pdfTeX is based on the original e-TeX sources and Web2c, and has been
-successfully compiled on many systems. It is actively maintained, but
-stability is paramount now; only bug fixes and small enhancements are expected.
+An important aspect of this project was to investigate alternative
+justification algorithms, resulting in the "microtypography" features of
+margin kerning and font expansion.  This was inspired by Peter Karow's
+and Hermann Zapf's work.
+
+pdfTeX is integrated with the original e-TeX sources and Web2c.  It is
+actively maintained, but stability is paramount now; only bug fixes and
+small enhancements are expected.  Releases are made through TeX Live.
 
 See the file NEWS for changes to the program.
 Documentation about pdfTeX can be found at http://www.pdftex.org.
