@@ -1,9 +1,13 @@
 pdfTeX 3.14159265-2.6-1.40.17 (TeX Live 2016)
 - changes:
-  - if environment variable SOURCE_DATE_EPOCH is set, use its value for
-    the CreationDate and ModDate values, and to seed the trailer /ID.
+  - if the environment variable SOURCE_DATE_EPOCH is set, use its value for
+    the PDF CreationDate and ModDate values, and to seed the trailer /ID.
     This by itself should suffice to create reproducible PDFs.  The
-    other changes support more granular output tweaks along the same lines.
+    new primitives below support more granular output tweaks with the
+    same intent.
+  - if the environment variable SOURCE_DATE_EPOCH_TEX_PRIMITIVES is set
+    to 1, the \year, \day, and \time primitives are also initialized
+    from the SOURCE_DATE_EPOCH value, instead of the current time.
     
   - new primitive \pdfinfoomitdate to omit CreationDate and ModDate keys.
   - new primitive \pdftrailerid to set seed for the trailer /ID
