@@ -1,3 +1,7 @@
+2016-05-04  Karl Berry  <karl@freefriends.org>
+
+	* texmfmp-help.h (PDFTEXHELP) [pdfTeX]: mention pdftex.org.
+
 2016-02-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* help.h: Add an option -charcode-format in omfonts for compatibility.
